test(TaskTable): fix tests, add test for region
Fix tests, add test for region.

Closes DCOS-18171 (+2 squashed commits)
Squashed commits:
[72bbe0a] feat(TaskTable): add id again and hide zone, host in tablet view

Add id again and hide zone, host in tablet view.

Closes DCOS-18171
[8360d7d] feat(TaskTable): add task zone, region in the taskTable and remove id

Add task zone, region in the taskTable and remove id.

Closes DCOS-18171

--- a/src/styles/components/task-table/styles.less
+++ b/src/styles/components/task-table/styles.less
@@ -2,6 +2,7 @@
 
   .task-table-column {
 
+    &-zone-address,
     &-host-address,
     &-cpus,
     &-mem,
@@ -24,6 +25,14 @@
     }
 
     &-host-address {
+      width: 120px;
+    }
+
+    &-zone-address {
+      width: 120px;
+    }
+
+    &-region-address {
       width: 120px;
     }
 
@@ -92,7 +101,7 @@
 
     .task-table-column {
 
-      &-host-address {
+      &-region-address {
         display: table-cell;
 
         col& {
@@ -109,6 +118,8 @@
 
     .task-table-column {
 
+      &-zone-address,
+      &-host-address,
       &-cpus,
       &-mem {
         display: table-cell;
